--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "drum-machine",
+  "homepage": "https://gonzalo-fuente.github.io/Drum_Machine",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -13,6 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,6 +41,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "mini-css-extract-plugin": "2.4.5",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.15"
   }
